--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
 					<!-- FORM · Por vehículo -->
 					<form
 						id="finderByVehicle"
-						class="md:col-span-2 rounded-2xl bg-white/5 border border-white/10 p-5"
+						class="md:col-span-2 rounded-2xl bg-white/5 border border-white/10 p-5 hidden"
 					>
 						<div class="grid md:grid-cols-4 gap-4">
 							<label class="text-xs text-white/70"
@@ -931,7 +931,7 @@
 					<!-- FORM · Por medida (oculto inicialmente) -->
 					<form
 						id="finderBySize"
-						class="md:col-span-2 rounded-2xl bg-white/5 border border-white/10 p-5 hidden"
+						class="md:col-span-2 rounded-2xl bg-white/5 border border-white/10 p-5"
 					>
 						<div class="grid md:grid-cols-6 gap-4">
 							<label class="text-xs text-white/70 md:col-span-2"
@@ -992,7 +992,7 @@
 							</label>
 
 							<div class="md:col-span-6 flex items-center gap-4">
-								<label
+								<!-- <label
 									class="inline-flex items-center gap-2 text-white/80 text-sm"
 								>
 									<input type="checkbox" checked /> Envío a domicilio
@@ -1001,7 +1001,7 @@
 									class="inline-flex items-center gap-2 text-white/80 text-sm"
 								>
 									<input type="checkbox" /> Recoger en tienda
-								</label>
+								</label> -->
 								<button
 									class="ml-auto inline-flex items-center gap-2 px-5 py-3 rounded-md font-extrabold text-black"
 									style="
