Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -2386,7 +2386,7 @@
 							href="#find-dealer"
 							class="flex-1 inline-flex items-center justify-center gap-2 px-4 py-3 rounded-xl font-extrabold text-black"
 							style="
-								background: #f6a800;
+								background: var(--accent);
 								box-shadow: 0 4px 0 rgba(0, 0, 0, 0.25);
 							"
 							data-cta="find-dealer"
@@ -2401,7 +2401,7 @@
 							Book a consultation <span>📅</span>
 						</button>
 						<a
-							href="/downloads/wear-resistance-whitepaper.pdf"
+							href="assets/pdf/Hello_Landscape.pdf"
 							class="flex-1 inline-flex items-center justify-center gap-2 px-4 py-3 rounded-xl bg-white text-neutral-900 font-bold"
 							download
 							data-cta="download-whitepaper"
