--- a/index.html
+++ b/index.html
@@ -246,14 +246,16 @@
 									class="relative z-20 h-full flex items-center justify-center text-center px-6"
 								>
 									<div class="slogan-lockup select-none">
-										<div
-											class="text-white/95 font-extrabold tracking-tight leading-none text-4xl sm:text-5xl md:text-6xl lg:text-7xl"
-										>
-											<span class="block">Landscape</span>
-											<span
-												class="block text-white/80 text-xl sm:text-2xl md:text-3xl lg:text-4xl mt-1"
-												>durable tire</span
-											>
+										<div class="font-extrabold tracking-tight leading-none">
+											<!-- Logo en lugar de "Landscape" -->
+											<img
+												src="assets/img/logo_morado.png"
+												srcset="assets/img/logo_morado.png 1x"
+												alt="Landscape"
+												class="mx-auto h-12 sm:h-14 md:h-16 lg:h-20 w-auto drop-shadow"
+												loading="eager"
+												decoding="async"
+											/>
 										</div>
 
 										<p
@@ -262,20 +264,27 @@
 											Less wear, More Miles
 										</p>
 
+										<!-- pill -->
 										<p
-											class="mt-3 inline-flex items-center justify-center gap-2 text-[12px] sm:text-sm md:text-base font-semibold text-white/90 bg-white/10 px-3 py-1 rounded-full border border-white/20"
+											class="mt-3 inline-flex items-center justify-center gap-2 text-[12px] sm:text-sm md:text-base font-semibold bg-white/10 px-3 py-1 rounded-full border border-white/20"
 										>
 											<span>–</span>
-											<span>Aegis High-Durability Tech</span>
+											<span class="aegis-text">Aegis High-Durability Tech</span>
 											<span>–</span>
 										</p>
+										<style>
+											/* fuerza el morado incluso si el lockup está en blanco con !important */
+											.slogan-lockup .aegis-text {
+												color: #820099 !important;
+											}
+										</style>
 
 										<div class="mt-6">
 											<a
 												href="#find-dealer"
 												class="inline-flex items-center gap-2 px-6 py-3 rounded-md font-extrabold text-black"
 												style="
-													background: #f6a800;
+													background: var(--accent);
 													box-shadow: 0 6px 0 rgba(0, 0, 0, 0.25);
 												"
 											>
