Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 					<div class="stage text-white">
 						<!-- Imagen de fondo -->
 						<img
-							src="assets/img/touring.webp"
+							src="assets/img/newImage.jpg"
 							alt="Colección Passenger"
 							class="absolute inset-0 w-full h-full object-cover z-[0]"
 							loading="lazy"
@@ -320,7 +320,7 @@
 							data-video
 						>
 							<source
-								src="assets/img/Scene_1_03s_202509171952.mp4"
+								src="assets/img/A_rugged_offroad_202509271235.mp4"
 								type="video/mp4"
 							/>
 							<!-- <source src="videos/slide1.webm" type="video/webm"> -->
@@ -566,7 +566,7 @@
 								<i class="fa-solid fa-network-wired"></i>
 							</div>
 							<div>
-								<h4 class="text-white font-bold">Red certificada</h4>
+								<h4 class="text-white font-bold">Certified network</h4>
 								<p class="text-white/70 text-sm mt-1">
 									Installation and balancing of a network covering Mexico and
 									the USA with a service SLA.
@@ -2292,7 +2292,7 @@
 							<input
 								type="email"
 								required
-								placeholder="Tu correo"
+								placeholder="Your email"
 								class="f-input"
 							/>
 							<button
