Update color variables in CSS and translate text for improved user experience

--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
 							box-shadow: 0 6px 0 rgba(0, 0, 0, 0.25);
 						"
 					>
-						Experiméntalo cerca de ti
+						Find it in your area.
 						<span
 							class="inline-grid place-items-center w-6 h-6 rounded-full border border-black/20"
 							>➜</span
@@ -1147,6 +1147,10 @@
 							<div class="tire-glow"></div>
 							<img
 								src="assets/img/terrain2.png"
+								srcset="
+									assets/img/terrain2-640.avif   640w,
+									assets/img/terrain2-1280.avif 1280w
+								"
 								alt="ARIA H7"
 								class="tire-img"
 								loading="lazy"
