--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.css"
+			integrity="sha512-Zcn6bjR/8RZbLEpLIeOwNtzREBAJnUKESxces60Mpoj+2okopSAcSUIUOseddDm0cxnGQzxIR7vJgsLZbdLE3w=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
 		<link rel="stylesheet" href="css/style.css" />
 		<!-- Tailwind CDN (prototipo). Compílalo en prod. -->
 		<script src="https://cdn.tailwindcss.com"></script>
@@ -1073,15 +1080,13 @@
 				>
 					<!-- MAP -->
 					<div class="lg:col-span-2">
-						<div class="map-box" id="mapBox">
-							<iframe
-								class="map-embed"
-								title="Mapa de distribuidores Landscape"
-								src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.481879626765!2d-99.13291152401565!3d19.433336141736366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1f92a02d8090f%3A0xace6a89da51b0f45!2sPalacio%20de%20Bell%20as%20Artes!5e0!3m2!1ses-419!2smx!4v1700000000000!5m2!1ses-419!2smx"
-								loading="lazy"
-								allowfullscreen=""
-								referrerpolicy="no-referrer-when-downgrade"
-							></iframe>
+						<div class="map-box">
+							<div
+								id="mapCanvas"
+								class="map-canvas"
+								role="region"
+								aria-label="Mapa interactivo de distribuidores Landscape"
+							></div>
 						</div>
 					</div>
 
@@ -2449,6 +2454,12 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/TextPlugin.min.js"></script>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.js"
+			integrity="sha512-BwHfrr4c9kmRkLw6iXFdzcdWV/PGkVgiIyIWLLlTSXzWQzxuSg4DiQUCpauz/EWjgk5TYQqX/kvn9pG1NpYfqg=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
