Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -40,14 +40,10 @@
 
 						<div class="flex items-center gap-3">
 							<img
-								src="assets/img/logo.png"
+								src="assets/img/landscape-durable.png"
 								alt="Landscape"
 								class="h-6 sm:h-7 md:h-8 w-auto drop-shadow"
 							/>
-
-							<span class="font-semibold tracking-wide"
-								>Less Wear, More Miles</span
-							>
 						</div>
 
 						<!-- Opción B: todo en texto -->
