Revise tire feature descriptions for clarity and impact; update icons and remove outdated comparison section

--- a/index.html
+++ b/index.html
@@ -518,108 +518,115 @@
 				<div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-5">
 					<article class="wl-card">
 						<div class="flex items-start gap-4">
-							<div class="wl-icon"><i class="fa-solid fa-flask"></i></div>
+							<i class="fa-solid fa-flask"></i>
 							<div>
-								<h4 class="text-white font-bold">Proprietary compounds</h4>
-								<p class="text-white/70 text-sm mt-1">
-									“ColdFlex™ / DryGrip+™” blends for consistent grip over a wide
-									thermal range and reduced wear.
-								</p>
-								<div class="mt-3 space-x-2">
-									<span class="wl-chip">+12% lifespan</span>
-									<span class="wl-chip">-8% rolling resistance</span>
-								</div>
+								<h4 class="text-white font-bold">Wear-Resistant Compound</h4>
+
+								<ul class="mt-3 space-y-1 text-white/80 text-sm">
+									<li class="flex items-center gap-2">
+										<i class="fa-solid fa-check text-[var(--accent)]"></i>
+										Advanced polymer composite formulation achieves a balance of
+										wear resistance, toughness, and high-temperature performance
+									</li>
+									<li class="flex items-center gap-2">
+										<i class="fa-solid fa-check text-[var(--accent)]"></i>
+										Nano-scale uniform dispersion technology enhances rubber
+										reinforcement and minimizes localized stress concentration.
+									</li>
+								</ul>
 							</div>
 						</div>
 					</article>
 
 					<article class="wl-card">
 						<div class="flex items-start gap-4">
-							<div class="wl-icon">
-								<i class="fa-solid fa-diagram-project"></i>
-							</div>
+							<i class="fa-solid fa-robot"></i>
 							<div>
-								<h4 class="text-white font-bold">Multi-contour design</h4>
-								<p class="text-white/70 text-sm mt-1">
-									Optimized tread with “MultiContour-X” for even wear and
-									shorter braking times in the wet.
-								</p>
-								<div class="mt-3 space-x-2">
-									<span class="wl-chip">-2.1 m wet braking</span>
-									<span class="wl-chip">+7% contact area</span>
-								</div>
+								<h4 class="text-white font-bold">Toughening Process</h4>
+
+								<ul class="mt-3 space-y-1 text-white/80 text-sm">
+									<li class="flex items-center gap-2">
+										<i class="fa-solid fa-check text-[var(--accent)]"></i> 1.
+										Independently controlled temperature and pressure
+										vulcanization process prevents over- or under-curing,
+										ensuring structural consistency of the tire body.
+									</li>
+									<li class="flex items-center gap-2">
+										<i class="fa-solid fa-check text-[var(--accent)]"></i> 2. AI
+										detection and precision control system with multi-point
+										sensors enables real-time monitoring and automatic
+										adjustment of production parameters.
+									</li>
+								</ul>
 							</div>
 						</div>
 					</article>
 
 					<article class="wl-card">
 						<div class="flex items-start gap-4">
-							<div class="wl-icon"><i class="fa-solid fa-fan"></i></div>
+							<i class="fa-solid fa-shield-halved"></i>
 							<div>
-								<h4 class="text-white font-bold">Real low noise</h4>
-								<p class="text-white/70 text-sm mt-1">
-									Asymmetrical tread patterns and “QuietWave” cavities for
-									quieter rides at 80–120 km/h.
-								</p>
-								<div class="mt-3 space-x-2">
-									<span class="wl-chip">-2.8 dB cabin</span>
-									<span class="wl-chip">Optimized NVH</span>
-								</div>
+								<h4 class="text-white font-bold">Impact-Resistant Structure</h4>
+								<ul class="mt-3 space-y-1 text-white/80 text-sm">
+									<li class="flex items-center gap-2">
+										<i class="fa-solid fa-check text-[var(--accent)]"></i> 1.
+										High-modulus cord fabric increases carcass rigidity,
+										disperses impact stress, and prevents structural fatigue and
+										tearing.
+									</li>
+									<li class="flex items-center gap-2">
+										<i class="fa-solid fa-check text-[var(--accent)]"></i> 2.
+										BPOT adaptive crown technology automatically adjusts the
+										tire’s contact shape according to road pressure, optimizing
+										multi-point pressure distribution and reducing localized
+										wear.
+									</li>
+								</ul>
 							</div>
 						</div>
 					</article>
 
 					<article class="wl-card">
 						<div class="flex items-start gap-4">
-							<div class="wl-icon">
-								<i class="fa-solid fa-shield-halved"></i>
-							</div>
+							<i class="fa-solid fa-road"></i>
+
 							<div>
-								<h4 class="text-white font-bold">Guarantee that weighs</h4>
-								<p class="text-white/70 text-sm mt-1">
-									Mileage and road damage warranty on selected lines.
-									Proportional replacement is provided.
-								</p>
-								<div class="mt-3 space-x-2">
-									<span class="wl-chip">Up to 80,000 km</span>
-									<span class="wl-chip">Road Hazard</span>
-								</div>
+								<h4 class="text-white font-bold">Traction Tread Design</h4>
+								<ul class="mt-3 space-y-1 text-white/80 text-sm">
+									<li class="flex items-center gap-2">
+										<i class="fa-solid fa-check text-[var(--accent)]"></i> 1.
+										Self-cleaning tread pattern design automatically removes
+										mud, snow, and stones to maintain safe traction.
+									</li>
+									<li class="flex items-center gap-2">
+										<i class="fa-solid fa-check text-[var(--accent)]"></i> 2.
+										Multi-curvature tread block technology adapts to varying
+										road conditions and load distributions, enhancing wear
+										resistance across multiple terrains.
+									</li>
+								</ul>
 							</div>
 						</div>
 					</article>
 
 					<article class="wl-card">
 						<div class="flex items-start gap-4">
-							<div class="wl-icon">
-								<i class="fa-solid fa-network-wired"></i>
-							</div>
-							<div>
-								<h4 class="text-white font-bold">Certified network</h4>
-								<p class="text-white/70 text-sm mt-1">
-									Installation and balancing of a network covering Mexico and
-									the USA with a service SLA.
-								</p>
-								<div class="mt-3 space-x-2">
-									<span class="wl-chip">2,500+ dealers</span>
-									<span class="wl-chip">SLA < 45 min</span>
-								</div>
-							</div>
-						</div>
-					</article>
+							<i class="fa-solid fa-bars-staggered"></i>
 
-					<article class="wl-card">
-						<div class="flex items-start gap-4">
-							<div class="wl-icon"><i class="fa-solid fa-seedling"></i></div>
 							<div>
-								<h4 class="text-white font-bold">Sustainability</h4>
-								<p class="text-white/70 text-sm mt-1">
-									Materials with bio-content and low-emission processes without
-									compromising performance.
-								</p>
-								<div class="mt-3 space-x-2">
-									<span class="wl-chip">-11% CO₂ eq.</span>
-									<span class="wl-chip">Cert. ISO 14001</span>
-								</div>
+								<h4 class="text-white font-bold">Reinforced Framework</h4>
+								<ul class="mt-3 space-y-1 text-white/80 text-sm">
+									<li class="flex items-center gap-2">
+										<i class="fa-solid fa-check text-[var(--accent)]"></i> 1.
+										Ultra-high-strength steel belts enhance carcass load-bearing
+										capability.
+									</li>
+									<li class="flex items-center gap-2">
+										<i class="fa-solid fa-check text-[var(--accent)]"></i> 2.
+										Low-denier, high-strength cord fabric improves impact
+										resistance of the tire body.
+									</li>
+								</ul>
 							</div>
 						</div>
 					</article>
@@ -631,19 +638,19 @@
 						<div class="text-3xl md:text-4xl font-black text-white">
 							<span class="counter" data-target="18">0</span>
 						</div>
-						<p class="text-xs text-white/70 mt-1">Active patents</p>
+						<p class="text-xs text-white/70 mt-1">Distributors</p>
 					</div>
 					<div class="wl-card text-center">
 						<div class="text-3xl md:text-4xl font-black text-white">
 							<span class="counter" data-target="98">0</span>%
 						</div>
-						<p class="text-xs text-white/70 mt-1">NPS (recomendation)</p>
+						<p class="text-xs text-white/70 mt-1">Sales Volume</p>
 					</div>
 					<div class="wl-card text-center">
 						<div class="text-3xl md:text-4xl font-black text-white">
 							<span class="counter" data-target="2500">0</span>+
 						</div>
-						<p class="text-xs text-white/70 mt-1">Dealers on the network</p>
+						<p class="text-xs text-white/70 mt-1">Satisfaction Rating</p>
 					</div>
 					<div class="wl-card text-center">
 						<div class="text-3xl md:text-4xl font-black text-white">
@@ -688,65 +695,6 @@
 									Clear coverage with 24/7 support.
 								</p>
 							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- Bloque 3: Comparativa rápida -->
-				<div class="mt-10 grid lg:grid-cols-2 gap-5">
-					<div class="wl-card">
-						<h4 class="text-white font-bold mb-3">Landscape vs. Generic</h4>
-						<ul class="text-sm space-y-2">
-							<li class="flex items-start gap-2">
-								<i class="fa-solid fa-check good mt-1"></i
-								><span class="text-white/80"
-									>Proprietary compounds with internal certification.</span
-								>
-							</li>
-							<li class="flex items-start gap-2">
-								<i class="fa-solid fa-check good mt-1"></i
-								><span class="text-white/80"
-									>Mileage Guarantee + Road Hazard.</span
-								>
-							</li>
-							<li class="flex items-start gap-2">
-								<i class="fa-solid fa-check good mt-1"></i
-								><span class="text-white/80"
-									>Installed network and measurable SLA times.</span
-								>
-							</li>
-							<li class="flex items-start gap-2">
-								<i class="fa-solid fa-xmark bad mt-1"></i
-								><span class="text-white/60"
-									>Generic: Standard mix, no public test data.</span
-								>
-							</li>
-						</ul>
-						<div class="mt-4 flex flex-wrap gap-2">
-							<span class="wl-chip">All-Season</span>
-							<span class="wl-chip">All-Weather</span>
-							<span class="wl-chip">Mud-Terrain</span>
-							<span class="wl-chip">UHP</span>
-						</div>
-					</div>
-
-					<!-- Testimonios / prueba social -->
-					<div class="wl-card">
-						<h4 class="text-white font-bold mb-3">What our customers say</h4>
-						<div class="space-y-3 text-white/80 text-sm">
-							<blockquote
-								class="bg-white/5 p-3 rounded-xl border border-white/10"
-							>
-								“+20,000 km and even wear. Noticeable silence on the highway.” —
-								<span class="text-white">Logistics fleet</span>
-							</blockquote>
-							<blockquote
-								class="bg-white/5 p-3 rounded-xl border border-white/10"
-							>
-								“Braking in the rain better than my previous ones, no
-								vibrations.” —
-								<span class="text-white">Family SUV</span>
-							</blockquote>
 						</div>
 					</div>
 				</div>
