Refactor card layout for improved spacing and styling; update chat widget styles for consistency

--- a/index.html
+++ b/index.html
@@ -517,12 +517,13 @@
 				<!-- Bloque 1: Diferenciadores clave -->
 				<div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-5">
 					<article class="wl-card">
-						<div class="flex items-start gap-4">
-							<i class="fa-solid fa-flask"></i>
-							<div>
+						<div class="space-y-3">
+							<div class="flex items-center gap-3">
+								<i class="fa-solid fa-flask"></i>
 								<h4 class="text-white font-bold">Wear-Resistant Compound</h4>
-
-								<ul class="mt-3 space-y-1 text-white/80 text-sm">
+							</div>
+							<div>
+								<ul class="space-y-1 text-white/80 text-sm">
 									<li class="flex items-center gap-2">
 										<i class="fa-solid fa-check text-[var(--accent)]"></i>
 										Advanced polymer composite formulation achieves a balance of
@@ -539,11 +540,12 @@
 					</article>
 
 					<article class="wl-card">
-						<div class="flex items-start gap-4">
-							<i class="fa-solid fa-robot"></i>
-							<div>
+						<div class="space-y-3">
+							<div class="flex items-center gap-3">
+								<i class="fa-solid fa-robot"></i>
 								<h4 class="text-white font-bold">Toughening Process</h4>
-
+							</div>
+							<div>
 								<ul class="mt-3 space-y-1 text-white/80 text-sm">
 									<li class="flex items-center gap-2">
 										<i class="fa-solid fa-check text-[var(--accent)]"></i> 1.
@@ -563,10 +565,12 @@
 					</article>
 
 					<article class="wl-card">
-						<div class="flex items-start gap-4">
-							<i class="fa-solid fa-shield-halved"></i>
-							<div>
+						<div class="space-y-3">
+							<div class="flex items-center gap-3">
+								<i class="fa-solid fa-shield-halved"></i>
 								<h4 class="text-white font-bold">Impact-Resistant Structure</h4>
+							</div>
+							<div>
 								<ul class="mt-3 space-y-1 text-white/80 text-sm">
 									<li class="flex items-center gap-2">
 										<i class="fa-solid fa-check text-[var(--accent)]"></i> 1.
@@ -587,11 +591,14 @@
 					</article>
 
 					<article class="wl-card">
-						<div class="flex items-start gap-4">
-							<i class="fa-solid fa-road"></i>
+						<div class="space-y-3">
+							<div class="flex items-center gap-3">
+								<i class="fa-solid fa-road"></i>
+
+								<h4 class="text-white font-bold">Traction Tread Design</h4>
+							</div>
 
 							<div>
-								<h4 class="text-white font-bold">Traction Tread Design</h4>
 								<ul class="mt-3 space-y-1 text-white/80 text-sm">
 									<li class="flex items-center gap-2">
 										<i class="fa-solid fa-check text-[var(--accent)]"></i> 1.
@@ -610,11 +617,13 @@
 					</article>
 
 					<article class="wl-card">
-						<div class="flex items-start gap-4">
-							<i class="fa-solid fa-bars-staggered"></i>
+						<div class="space-y-3">
+							<div class="flex items-center gap-3">
+								<i class="fa-solid fa-bars-staggered"></i>
+								<h4 class="text-white font-bold">Reinforced Framework</h4>
+							</div>
 
 							<div>
-								<h4 class="text-white font-bold">Reinforced Framework</h4>
 								<ul class="mt-3 space-y-1 text-white/80 text-sm">
 									<li class="flex items-center gap-2">
 										<i class="fa-solid fa-check text-[var(--accent)]"></i> 1.
