Add SVG representation of the flags

--- a/index.html
+++ b/index.html
@@ -76,23 +76,6 @@
 								class="h-6 sm:h-7 md:h-8 w-auto drop-shadow"
 							/>
 						</div>
-
-						<!-- Opción B: todo en texto -->
-						<!-- <div
-							class="flex flex-wrap items-baseline justify-center gap-x-2 gap-y-1 font-extrabold tracking-wide"
-						>
-							<span class="uppercase text-base sm:text-lg md:text-xl"
-								>Landscape</span
-							>
-							<span
-								class="uppercase text-white/80 text-xs sm:text-sm md:text-base"
-								>Durable Tire</span
-							>
-							<span class="opacity-60">—</span>
-							<span class="text-xs sm:text-sm md:text-base"
-								>Less Wear, More Miles</span
-							>
-						</div> -->
 					</div>
 				</div>
 			</div>
@@ -113,11 +96,7 @@
 							aria-pressed="false"
 							aria-label="Cambiar a Español (México)"
 						>
-							<img
-								src="https://upload.wikimedia.org/wikipedia/commons/f/fc/Flag_of_Mexico.svg"
-								alt=""
-								class="w-5 h-3"
-							/>
+							<img src="assets/img/flags/mx.svg" alt="" class="w-5 h-3" />
 							<span>ES</span>
 						</button>
 						<button
@@ -127,11 +106,7 @@
 							aria-pressed="false"
 							aria-label="Switch to English (USA)"
 						>
-							<img
-								src="https://upload.wikimedia.org/wikipedia/commons/a/a4/Flag_of_the_United_States.svg"
-								alt=""
-								class="w-5 h-5"
-							/>
+							<img src="assets/img/flags/us.svg" alt="" class="w-5 h-5" />
 							<span>EN</span>
 						</button>
 					</div>
